--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -4,12 +4,7 @@ author: "Estatística 2017"
 date: "11 de setembro de 2017"
 output: html_document
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-12123
+# Introdução
 
 
 ```{r }
