--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -7,8 +7,13 @@ output: html_document
 # Introdução
 ```{r, echo=FALSE }
 library(readxl) #biblioteca para ler o excel
+library(knitr)
 data <- read_excel("C:/Users/TEMP/Downloads/ME710%2FME810 (2).xlsx") #leitura dos dados
+
 plot(data, main="Gráfico de Dispersão", xlab="Concentração", ylab="Área") #grafico de dispersao
+
+kable(summary(data)) #medidas resumo
+
 
 ```
 
