--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -6,9 +6,9 @@ output: html_document
 ---
 # Introdução
 
-A *start up* Validari consiste na criação de *software* para validação de métodos analiticos na indústria farmacêutica. O objetivo do nosso projeto é explicar como é feita a análise da Linearidade da Validação.  
-Avaliar e revisar a metodologia usada para validação da linearidade. Explicando de forma clara e objetiva por que a metodologia é a mais adequada.  
-O grupo fará um relatório em R para o cliente contendo as etapas para realizar o teste de linearidade com base na teoria das referências, explicando o passo a passo de maneira didática.  
+A Validari é uma *start up* que foi criada com o intuito de auxiliar os laboratórios farmacêuticos na validação de métodos analíticos. A proposta da empresa é criar um *software online*, que seja capaz de validar métodos analíticos de forma ágil e correta estatisticamente.  
+O objetivo do nosso projeto é avaliar e revisar a metodologia usada para validação da Linearidade, explicando de forma clara o passo a passo da metodologia mais adequada.  
+
 
 ```{r, echo=FALSE }
 library(readxl) #biblioteca para ler o excel
