--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -10,6 +10,14 @@ A Validari é uma *start up* que foi criada com o intuito de auxiliar os laborat
 O objetivo do nosso projeto é avaliar e revisar a metodologia usada para validação da Linearidade, explicando de forma clara o passo a passo da metodologia mais adequada.  
 
 
+
+# Análise descritiva 
+A Estatística descritiva fornece resumos simples sobre a amostra e sobre as observações que foram feitas. Tal resumo pode ser quantitativo ou visual.     
+Como geralmente os dados são “concentração” e “área”, sabemos que eles são **positivos** e **não nulos** , ou seja, maiores que zero. Sugerimos, então, fazer um gráfico de dispersão e calcular as medidas resumo.    
+Pelo gráfico de dispersão, será possível observar se há valores discrepantes ou se há inconsistência nos dados (erro de digitação, por exemplo).   
+Pelas medidas resumo verificamos se os valores tem as características esperadas. Tais medidas consistem em valores máximo e mínimo, média e desvio padrão.    
+Lembrando que **não** devemos retirar um valor da amostra, por mais que ele seja muito diferente dos demais, exceto quando há **certeza** de que foi um erro humano.
+
 ```{r, echo=FALSE }
 library(readxl) #biblioteca para ler o excel
 library(knitr)
@@ -22,7 +30,6 @@ kable(summary(data)) #medidas resumo
 
 ```
 
-# Objetivo
 
 # Conclusão
 ```{r,echo=FALSE }
