--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -21,7 +21,7 @@ Lembrando que **não** devemos retirar um valor da amostra, por mais que ele sej
 ```{r, echo=FALSE }
 library(readxl) #biblioteca para ler o excel
 library(knitr)
-data <- read_excel("C:/Users/TEMP/Downloads/ME710%2FME810 (2).xlsx") #leitura dos dados
+data <- read_excel("C:/Users/TEMP/Downloads/data.xlsx") #leitura dos dados
 
 plot(data, main="Gráfico de Dispersão", xlab="Concentração", ylab="Área") #grafico de dispersao
 
