--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -2,7 +2,10 @@
 title: "Validari - Linearidade"
 author: "Estatística 2017"
 date: "11 de setembro de 2017"
+header-includes:
+   - \usepackage{bbm}
 output: html_document
+
 ---
 # Introdução
 
@@ -11,25 +14,32 @@ O objetivo do nosso projeto é avaliar e revisar a metodologia usada para valida
 
 
 
-# Análise descritiva 
+# Análise descritiva   
+
 A Estatística descritiva fornece resumos simples sobre a amostra e sobre as observações que foram feitas. Tal resumo pode ser quantitativo ou visual.     
 Como geralmente os dados são “concentração” e “área”, sabemos que eles são **positivos** e **não nulos** , ou seja, maiores que zero. Sugerimos, então, fazer um gráfico de dispersão e calcular as medidas resumo.    
 Pelo gráfico de dispersão, será possível observar se há valores discrepantes ou se há inconsistência nos dados (erro de digitação, por exemplo).   
 Pelas medidas resumo verificamos se os valores tem as características esperadas. Tais medidas consistem em valores máximo e mínimo, média e desvio padrão.    
 Lembrando que **não** devemos retirar um valor da amostra, por mais que ele seja muito diferente dos demais, exceto quando há **certeza** de que foi um erro humano.
 
-```{r, echo=FALSE }
+```{r, echo=FALSE, warning=FALSE}
 library(readxl) #biblioteca para ler o excel
 library(knitr)
-data <- read_excel("C:/Users/TEMP/Downloads/data.xlsx") #leitura dos dados
+library(xtable)
+data <- read_excel("~/ME810-master/data.xlsx") #leitura dos dados
 
 plot(data, main="Gráfico de Dispersão", xlab="Concentração", ylab="Área") #grafico de dispersao
 
-kable(summary(data)) #medidas resumo
-
-
 ```
 
+**Medias Resumo**  
+
+
+|        | Concentração | Área     |
+|--------|--------------|----------|
+| Mínimo | `r min(data$Concentração)`         | `r round(min(data$Área), 2)`  |
+| Máximo | `r max(data$Concentração)`        | `r formatC(max(data$Área), digits = 7)` |
+| Média  | `r mean(data$Concentração)`         | `r formatC(mean(data$Área), digits = 7)` |
 
 # Conclusão
 ```{r,echo=FALSE }
