--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -25,9 +25,7 @@ Lembrando que **não** devemos retirar um valor da amostra, por mais que ele sej
 ```{r, echo=FALSE, warning=FALSE}
 library(readxl) #biblioteca para ler o excel
 library(knitr)
-library(xtable)
-data <- read_excel("~/ME810-master/data.xlsx") #leitura dos dados
-
+data <- read_excel("C:/Users/TEMP/Downloads/data.xlsx") #leitura dos dados
 plot(data, main="Gráfico de Dispersão", xlab="Concentração", ylab="Área") #grafico de dispersao
 
 ```
@@ -47,15 +45,15 @@ plot(data, main="Gráfico de Dispersão", xlab="Concentração", ylab="Área") #
 Estatisticamente, a melhor forma de avaliar a linearidade é através da regressão linear, pois é a metodologia que estuda a relação entre uma variável de interesse (Área) e outras variáveis (Concentração). Com a regressão, vemos qual a melhor reta $(y=ax + b)$ a ser traçada que se ajusta melhor nesses dados, ou seja, qual reta faz com que a distância entre os pontos e a reta ajustada seja a menor possível, minimizando o erro e estimando com maior precisão, por isso a estimação é feita através do Método dos Mínimos Quadrados.  
 
 ```{r,echo=FALSE }
-fit = lm(Concentração~Área, data=data)
-plot(Concentração~Área, data=data, main="Curva Analítica")
+fit = lm(Área~Concentração, data=data)
+plot(Área~Concentração, data=data, main="Curva Analítica")
 abline(fit, col="red")
 r= summary(fit)$r.squared
 
 ```
 
 Acima, temos a reta de regressão (curva analítica) traçada em cima dos pontos. A reta encontrada foi:   
-$$Y = `r round(coefficients(fit)[2], 6)`X + `r round(coefficients(fit)[1], 3)`$$
+$$Y = `r coefficients(fit)[2]`X + `r coefficients(fit)[1]`$$
 O $R^2 = `r r`$
 
 # Conclusão
