--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -54,7 +54,7 @@ r= summary(fit)$r.squared
 
 Acima, temos a reta de regressão (curva analítica) traçada em cima dos pontos. A reta encontrada foi:   
 $$Y = `r format(coefficients(fit)[2], scientific=FALSE)`X + `r round(coefficients(fit)[1], 2)`$$
-O $R^2 = `r r`$
+O coeficiente de correlação obtido é $R^2 = `r r`$.
 
 # Conclusão
 ```{r,echo=FALSE }
