--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -54,8 +54,7 @@ r= summary(fit)$r.squared
 
 Acima, temos a reta de regressão (curva analítica) traçada em cima dos pontos. A reta encontrada foi:   
 $$Y = `r format(coefficients(fit)[2], scientific=FALSE)`X + `r round(coefficients(fit)[1], 2)`$$
-O coeficiente de correlação obtido é $R^2 = `r r`$.
-
+Ou seja, $a=`r format(coefficients(fit)[2], scientific=FALSE)`$ e $b=`r round(coefficients(fit)[1], 2)`$. 
 # Conclusão
 ```{r,echo=FALSE }
 
