--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -61,7 +61,28 @@ Ou seja, $a=`r format(coefficients(fit)[2], scientific=FALSE)`$ e $b=`r round(co
 | a         	| `r  format(coefficients(fit)[2], scientific=FALSE)` 	| `r summary(fit)$coefficients[2,4]`  	|
 | b         	| `r round(coefficients(fit)[1], 2)`                  	| `r summary(fit)$coefficients[1,4]`  	|    
 
+# Qualidade de Ajuste e homocedasticidade
+
+O passo seguinte após determinarmos a metodologia e ajustarmos o modelo é verificar a qualidade do ajuste do modelo aos dados. Algumas técnicas podem ser utilizadas, entre elas a  “análise de variância da regressão”(ANOVA)  que é uma das mais utilizadas. 
+
+Tabela ANOVA
+
+Para avaliar se a reta foi bem ajustada, ou seja, se os coeficientes da reta se ajustam bem aos pontos, vamos observar o p-valor. Ele nos mostra se cada coeficiente é significativo ou não para o modelo.
+Dado que o nível de significância é 0.05, se:
+   \cdot P-valor < 0.05, há evidências para de que o parâmetro é significativo, ou seja, ele é diferente de zero, e a linearidade é aceita.  
+   \cdot P-valor > 0,05, não há evidências para de que o parâmetro é significativo, ou seja, ele é igual a zero e não significativo para o modelo. Neste caso, a linearidade não é aceita.
+
+Para verificarmos a homocedasticidade do modelo, ou seja, se temos variância constante, vamos utilizar o Teste de Cochran, que consiste em comparar a maior variância com as demais.
+
+https://www.rdocumentation.org/packages/outliers/versions/0.14/topics/cochran.test
+
+https://stat.ethz.ch/pipermail/r-help/2007-November/144978.html
+
+
 # Conclusão
+
+Através de métodos estatísticos temos condição de validar a linearidade, partindo inicialmente com uma estatística descritiva para dar uma visão geral das concentrações e suas áreas , seguindo de uma regressão linear para nos mostrarmos estatisticamente a linearidade, concluindo com testes para verificação de alguns pontos importantes como independência, normalidade e homocedasticidade.  
+
 ```{r,echo=FALSE }
 
 ```
