--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -63,30 +63,24 @@ Na Figura 2, temos a reta de regressão (curva analítica) traçada em cima dos 
 $$Y = `r format(coefficients(fit)[2], scientific=FALSE)`X + `r round(coefficients(fit)[1], 2)`$$
 Ou seja, $a=`r format(coefficients(fit)[2], scientific=FALSE)`$ e $b=`r round(coefficients(fit)[1], 2)`$.   
 
+
+# Qualidade de Ajuste Do Modelo
+
+Após determinarmos a metodologia e ajustarmos o modelo, é necessário verificar a qualidade do ajuste do modelo aos dados. Algumas técnicas podem ser utilizadas, entre elas a  “análise de variância da regressão” (ANOVA), que é uma das mais utilizadas. 
+Considerando o nosso exemplo, o resultado da ANOVA é mostrado na tabela 2:
+
 | Parâmetro 	| Estimativa                                          	| p-valor                             	|
 |-----------	|-----------------------------------------------------	|-------------------------------------	|
 | a         	| `r  format(coefficients(fit)[2], scientific=FALSE)` 	| `r summary(fit)$coefficients[2,4]`  	|
 | b         	| `r round(coefficients(fit)[1], 2)`                  	| `r summary(fit)$coefficients[1,4]`  	|    
 
-Tabela 2: Estimativas e p-valor dos parâmetros da reta ajustada.
-
-
-# Qualidade de Ajuste e homocedasticidade
-
-Após determinarmos a metodologia e ajustarmos o modelo, é necessário verificar a qualidade do ajuste do modelo aos dados. Algumas técnicas podem ser utilizadas, entre elas a  “análise de variância da regressão” (ANOVA),  que é uma das mais utilizadas. 
-
-Tabela ANOVA
+Tabela 2: Tabela ANOVA- Estimativas e p-valor dos parâmetros da reta ajustada.
 
 Para avaliar se a reta foi bem ajustada, ou seja, se os coeficientes da reta se ajustam bem aos pontos, vamos observar o p-valor. Ele nos mostra se cada coeficiente é significativo ou não para o modelo.
 Dado que o nível de significância é 0.05, se:   
    <p> * P-valor < 0.05, há evidências para de que o parâmetro é significativo, ou seja, ele é diferente de zero, e a linearidade é aceita. <br />    
        * P-valor > 0,05, não há evidências para de que o parâmetro é significativo, ou seja, ele é igual a zero e não significativo para o modelo. Neste caso, a linearidade não é aceita. </p>  
 
-Para verificarmos a homocedasticidade do modelo, ou seja, se temos variância constante, vamos utilizar o Teste de Cochran, que consiste em comparar a maior variância com as demais.
-
-https://www.rdocumentation.org/packages/outliers/versions/0.14/topics/cochran.test
-
-https://stat.ethz.ch/pipermail/r-help/2007-November/144978.html
 
 # Diagnóstico do Modelo - Análise de Resíduos
 
