--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -16,7 +16,7 @@ O objetivo do nosso projeto é avaliar e revisar a metodologia usada para valida
 
 # Análise descritiva   
 
-A análise descritiva fornece resumos simples sobre a amostra e sobre as observações. Tal resumo pode ser quantitativo ou visual.     
+A análise descritiva fornece resumos simples sobre a amostra e sobre as variáveis observadas. Tal resumo pode ser quantitativo ou visual.     
 Como geralmente os dados são “concentração” e “área”, sabemos que eles são **positivos** e **não nulos** , ou seja, maiores que zero. Sugerimos, então, fazer um gráfico de dispersão e calcular as medidas resumo.    
 Pelo gráfico de dispersão (Figura 1), será possível observar se há valores discrepantes ou se há inconsistência nos dados (erro de digitação, por exemplo).   
 Pelas medidas resumo verificamos se os valores tem as características esperadas. Tais medidas consistem em valores máximo e mínimo, média e desvio padrão.    
