--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -121,21 +121,13 @@ qqnorm(residuals(fit),pch=20);qqline(residuals(fit))
 
 #Teste de Falta de Ajuste
 
-O Teste Lack of Fit é um teste estatístico para avaliar a falta de ajuste em um modelo de regressão. O teste assume que a normalidade, independência e homocedasticiade da variância dos resíduos sejam válidos. Assim, após o ajuste e análise de resíduos, é importante verificar se o modelo linear é adequado.
+<p align="justify"> $\quad$ O Teste Lack of Fit é um teste estatístico para avaliar a falta de ajuste em um modelo de regressão. O teste assume que a normalidade, independência e homocedasticiade da variância dos resíduos sejam válidos. Assim, após o ajuste e análise de resíduos, é importante verificar se o modelo linear é adequado.</p>
 
 ```{r,echo=FALSE }
 library(alr3)
 pureErrorAnova(fit)
 ```
 
-
 # Conclusão
 
-Através de métodos estatísticos temos condição de validar a linearidade, partindo inicialmente com uma estatística descritiva para dar uma visão geral das concentrações e suas áreas , seguindo de uma regressão linear para nos mostrarmos estatisticamente a linearidade, concluindo com testes para verificação de alguns pontos importantes como independência, normalidade e homocedasticidade.  
-
-```{r,echo=FALSE }
-
-```
-
-
-
+<p align="justify"> $\quad$ Através de métodos estatísticos temos condição de validar a linearidade, partindo inicialmente com uma estatística descritiva para dar uma visão geral das concentrações e suas áreas , seguindo de uma regressão linear para nos mostrarmos estatisticamente a linearidade, concluindo com testes para verificação de alguns pontos importantes como independência, normalidade e homocedasticidade. </p> 
